# theatre-of-the-mind

./: .gitignore  LICENSE  LICENSE-OGL.md  README.md  main.py  mkdocs.private.yml  mkdocs.yml  pyproject.toml
.github/workflows/: render-docs.yml
adventures/beacon-enon-tor/: metadata.json
custom_theme/: toc.html
docs/: .nav.yml  _footer.html  _header.html  _style.css  _toc.html  design-doc.html  design-doc.md  dev-notes.html  dev-notes.md  docs.html  extra.css  index.html  index.md  internal-archives.html  internal-archives.md
docs/_overrides/: main.html
docs/adventure-format/: adventure-module-quickstart.md  adventure-module-spec.md
docs/ose-basic-srd/: .nav.yml  ose-monster-descriptions.md  ose-srd-adventures.md  ose-srd-characters.md  ose-srd-equipment-services.md  ose-srd-magic.md  ose-srd-monsters.md  ose-srd-running-adventures.md  ose-srd-treasure.md
docs/ose-basic-srd/ose-classes/: ose-class-cleric.md  ose-class-dwarf.md  ose-class-elf.md  ose-class-fighter.md  ose-class-halfling.md  ose-class-magicuser.md  ose-class-thief.md
docs/ose-basic-srd/ose-cleric-spells/: ose-1st-level-cleric-spells.md  ose-2nd-level-cleric-spells.md  ose-3rd-level-cleric-spells.md  ose-4th-level-cleric-spells.md  ose-5th-level-cleric-spells.md
docs/ose-basic-srd/ose-magic-spells/: ose-1st-level-magic-spells.md  (+5 more)
evennia-server/typeclasses/: characters.py  objects.py
evennia_server/commands/: default_cmdsets.py
evennia_server/typeclasses/: characters.py  rooms.py
scripts/: make-archive.sh  serve-docs-private.sh  serve-docs-public.sh  serve-docs.sh
(+3 files in other folders)
