[project]
name = "theatre-of-the-mind"
version = "0.1.0"
description = "A text-based game engine for playing and remixing classic TTRPG adventures with modular rulesets."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "evennia>=5.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-cinder>=1.2.0",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-material>=9.6.17",
    "mkdocs-redirects>=1.2.2",
]

[dependency-groups]
dev = [
    "mkdocs-awesome-nav>=3.1.2",
]
